--- a/visualization/index.html
+++ b/visualization/index.html
@@ -1912,32 +1912,39 @@
                         <label>Cancer Type</label>
                         <select id="cancer-type-select">
                             <option value="all">All Cancer Types</option>
-                            <option value="BRCA">Breast Cancer</option>
-                            <option value="LUAD">Lung Adenocarcinoma</option>
-                            <option value="COAD">Colon Cancer</option>
-                            <option value="LIHC">Liver Cancer</option>
-                            <option value="PAAD">Pancreatic Cancer</option>
-                            <option value="KIRC">Kidney Cancer</option>
+                            <!-- Populated dynamically from data -->
                         </select>
                     </div>
                     <div class="control-group">
                         <label>Signature Type</label>
                         <select id="cancer-type-sig">
-                            <option value="CytoSig">CytoSig</option>
-                            <option value="SecAct">SecAct</option>
+                            <option value="CytoSig">CytoSig (43 cytokines)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
                         </select>
+                    </div>
+                    <div class="control-group">
+                        <label>Select Signature</label>
+                        <select id="cancer-type-protein-dropdown" style="width: 150px;">
+                            <option value="IFNG">IFNG</option>
+                        </select>
+                    </div>
+                    <div class="control-group" style="position: relative;">
+                        <label>Or Search</label>
+                        <input type="text" id="cancer-type-protein-search" placeholder="Search..."
+                               style="width: 120px; padding: 8px; border: 1px solid #ddd; border-radius: 4px;" autocomplete="off" value="IFNG">
+                        <div id="cancer-type-suggestions" style="position: absolute; top: 100%; left: 0; width: 120px; max-height: 200px; overflow-y: auto; background: white; border: 1px solid #ddd; border-radius: 4px; display: none; z-index: 100; box-shadow: 0 2px 8px rgba(0,0,0,0.1);"></div>
                     </div>
                 </div>
 
                 <div class="two-col">
                     <div class="viz-container" style="min-height: 500px;">
-                        <div class="viz-title">Pan-Cancer Signature Comparison</div>
-                        <div class="viz-subtitle">Cytokine activity profiles across cancer types</div>
+                        <div class="viz-title">Cancer-Specific Signature Activity</div>
+                        <div class="viz-subtitle" id="cancer-type-bar-subtitle">Mean activity by cancer type</div>
                         <div id="cancer-type-bar" class="loading">Loading data...</div>
                     </div>
                     <div class="viz-container" style="min-height: 500px;">
-                        <div class="viz-title">Cancer Type Clustering</div>
-                        <div class="viz-subtitle">Hierarchical clustering based on cytokine signatures</div>
+                        <div class="viz-title">Cancer Type × Signature Heatmap</div>
+                        <div class="viz-subtitle" id="cancer-type-heatmap-subtitle">Activity patterns across cancer types</div>
                         <div id="cancer-type-heatmap" class="loading">Loading data...</div>
                     </div>
                 </div>
@@ -8333,105 +8340,205 @@
             }
         }
 
+        // scAtlas: Cancer Types - Helper functions
+        function getCancerTypeSignatures() {
+            const data = state.data.cancertypes;
+            if (!data) return [];
+            const sigType = document.getElementById('cancer-type-sig')?.value || 'CytoSig';
+            return sigType === 'CytoSig'
+                ? (data.cytosig_signatures || [])
+                : (data.secact_signatures || []);
+        }
+
+        function showCancerTypeSuggestions() {
+            const input = document.getElementById('cancer-type-protein-search');
+            const div = document.getElementById('cancer-type-suggestions');
+            if (!input || !div) return;
+
+            const query = input.value.toLowerCase();
+            const sigs = getCancerTypeSignatures();
+            const filtered = sigs.filter(s => s.toLowerCase().includes(query)).slice(0, 15);
+
+            if (filtered.length === 0) { div.style.display = 'none'; return; }
+
+            div.innerHTML = filtered.map(s =>
+                `<div style="padding:6px 10px;cursor:pointer;border-bottom:1px solid #eee"
+                     onmouseover="this.style.background='#f0f0f0'" onmouseout="this.style.background='white'"
+                     onclick="selectCancerTypeSig('${s}')">${s}</div>`
+            ).join('');
+            div.style.display = 'block';
+        }
+
+        function selectCancerTypeSig(sig) {
+            const input = document.getElementById('cancer-type-protein-search');
+            const dropdown = document.getElementById('cancer-type-protein-dropdown');
+            const div = document.getElementById('cancer-type-suggestions');
+            if (input) input.value = sig;
+            if (dropdown) dropdown.value = sig;
+            if (div) div.style.display = 'none';
+            updateCancerTypesBar();
+        }
+
+        function populateCancerTypesDropdowns() {
+            const data = state.data.cancertypes;
+            if (!data) return;
+
+            // Populate cancer type dropdown
+            const cancerSelect = document.getElementById('cancer-type-select');
+            if (cancerSelect && data.cancer_types) {
+                const labels = data.cancer_labels || {};
+                cancerSelect.innerHTML = '<option value="all">All Cancer Types</option>' +
+                    data.cancer_types.map(ct =>
+                        `<option value="${ct}">${labels[ct] || ct}</option>`
+                    ).join('');
+            }
+
+            // Populate protein dropdown
+            const proteinDropdown = document.getElementById('cancer-type-protein-dropdown');
+            const searchInput = document.getElementById('cancer-type-protein-search');
+            if (proteinDropdown) {
+                const sigs = getCancerTypeSignatures().slice(0, 100);  // Limit for performance
+                proteinDropdown.innerHTML = sigs.map(s =>
+                    `<option value="${s}">${s}</option>`
+                ).join('');
+                if (sigs.includes('IFNG')) proteinDropdown.value = 'IFNG';
+                if (searchInput) searchInput.value = proteinDropdown.value;
+            }
+        }
+
         // scAtlas: Cancer Types
         function updateCancerTypes() {
-            const container1 = document.getElementById('cancer-type-bar');
-            const container2 = document.getElementById('cancer-type-heatmap');
+            populateCancerTypesDropdowns();
+            updateCancerTypesBar();
+            updateCancerTypesHeatmap();
+        }
 
-            // Use cancer comparison data grouped by cancer type
-            const data = state.data.cancercomparison;
+        function updateCancerTypesBar() {
+            const container = document.getElementById('cancer-type-bar');
+            if (!container) return;
 
+            const data = state.data.cancertypes;
             if (!data || !data.data?.length) {
-                [container1, container2].forEach(c => {
-                    if (c) {
-                        c.classList.remove('loading');
-                        c.innerHTML = '<p style="text-align:center; color:#666; padding:2rem;">Pan-cancer comparison data will be available after running scAtlas analysis.</p>';
-                    }
-                });
+                container.classList.remove('loading');
+                container.innerHTML = '<p style="text-align:center; color:#666; padding:2rem;">Cancer type data not available. Run preprocessing script.</p>';
                 return;
             }
 
-            const sigType = document.getElementById('cancer-sig-type')?.value || 'CytoSig';
-            const filtered = data.data.filter(d => d.signature_type === sigType);
+            const sigType = document.getElementById('cancer-type-sig')?.value || 'CytoSig';
+            const cancerType = document.getElementById('cancer-type-select')?.value || 'all';
+            const searchInput = document.getElementById('cancer-type-protein-search')?.value?.trim();
+            const signature = searchInput || document.getElementById('cancer-type-protein-dropdown')?.value || 'IFNG';
 
-            // Aggregate by signature - mean difference across cell types
-            const sigMap = {};
+            // Filter by signature type and signature
+            let filtered = data.data.filter(d =>
+                d.signature_type === sigType && d.signature === signature
+            );
+
+            // Filter by cancer type if not "all"
+            if (cancerType !== 'all') {
+                filtered = filtered.filter(d => d.cancer_type === cancerType);
+            }
+
+            if (filtered.length === 0) {
+                container.classList.remove('loading');
+                container.innerHTML = `<p style="text-align:center; color:#666; padding:2rem;">No data for ${signature} in selected cancer type(s).</p>`;
+                return;
+            }
+
+            // Sort by mean activity
+            const barData = filtered.sort((a, b) => b.mean_activity - a.mean_activity);
+
+            // Update subtitle
+            const subtitle = document.getElementById('cancer-type-bar-subtitle');
+            if (subtitle) {
+                const labels = data.cancer_labels || {};
+                const cancerText = cancerType === 'all' ? 'all cancer types' : (labels[cancerType] || cancerType);
+                subtitle.textContent = `${signature} activity across ${cancerText}`;
+            }
+
+            container.classList.remove('loading');
+            Plotly.purge(container);
+
+            const labels = data.cancer_labels || {};
+            Plotly.newPlot(container, [{
+                type: 'bar',
+                orientation: 'h',
+                y: barData.map(d => labels[d.cancer_type] || d.cancer_type),
+                x: barData.map(d => d.mean_activity),
+                marker: {
+                    color: barData.map(d => d.mean_activity >= 0 ? '#1f77b4' : '#d62728')
+                },
+                text: barData.map(d => d.specificity_score ? `spec: ${d.specificity_score.toFixed(2)}` : ''),
+                textposition: 'outside',
+                hovertemplate: '<b>%{y}</b><br>Activity: %{x:.3f}<br>Specificity: %{text}<extra></extra>'
+            }], {
+                xaxis: { title: `${signature} Activity (z-score)`, zeroline: true },
+                yaxis: { automargin: true },
+                margin: { l: 180, r: 50, t: 20, b: 50 },
+                height: Math.max(400, barData.length * 30)
+            }, { responsive: true });
+        }
+
+        function updateCancerTypesHeatmap() {
+            const container = document.getElementById('cancer-type-heatmap');
+            if (!container) return;
+
+            const data = state.data.cancertypes;
+            if (!data || !data.data?.length) {
+                container.classList.remove('loading');
+                container.innerHTML = '<p style="text-align:center; color:#666; padding:2rem;">Cancer type data not available.</p>';
+                return;
+            }
+
+            const sigType = document.getElementById('cancer-type-sig')?.value || 'CytoSig';
+            const cancerType = document.getElementById('cancer-type-select')?.value || 'all';
+
+            // Filter by signature type
+            let filtered = data.data.filter(d => d.signature_type === sigType);
+
+            // Get cancer types and signatures
+            const cancerTypes = cancerType === 'all'
+                ? (data.cancer_types || [...new Set(filtered.map(d => d.cancer_type))])
+                : [cancerType];
+            const signatures = sigType === 'CytoSig'
+                ? (data.cytosig_signatures || [])
+                : (data.secact_signatures || []).slice(0, 50);
+
+            // Build lookup map
+            const activityMap = {};
             filtered.forEach(d => {
-                if (!sigMap[d.signature]) sigMap[d.signature] = [];
-                sigMap[d.signature].push(d.difference);
+                activityMap[`${d.cancer_type}|${d.signature}`] = d.mean_activity;
             });
 
-            const aggregated = Object.entries(sigMap)
-                .map(([sig, diffs]) => ({
-                    signature: sig,
-                    meanDiff: diffs.reduce((a, b) => a + b, 0) / diffs.length
-                }))
-                .sort((a, b) => b.meanDiff - a.meanDiff);
+            // Build matrix: cancer types (rows) x signatures (columns)
+            const zMatrix = cancerTypes.map(ct =>
+                signatures.map(sig => activityMap[`${ct}|${sig}`] || 0)
+            );
 
-            // 1. Bar chart - top upregulated and downregulated signatures
-            if (container1) {
-                container1.classList.remove('loading');
-                Plotly.purge(container1);
-
-                const top15 = aggregated.slice(0, 15);
-                const bottom15 = aggregated.slice(-15).reverse();
-                const display = [...top15, ...bottom15];
-
-                Plotly.newPlot(container1, [{
-                    type: 'bar',
-                    orientation: 'h',
-                    y: display.map(d => d.signature),
-                    x: display.map(d => d.meanDiff),
-                    marker: {
-                        color: display.map(d => d.meanDiff > 0 ? '#d62728' : '#2ca02c')
-                    },
-                    text: display.map(d => d.meanDiff.toFixed(4)),
-                    textposition: 'auto',
-                    hovertemplate: '<b>%{y}</b><br>Tumor - Adjacent: %{x:.4f}<extra></extra>'
-                }], {
-                    xaxis: { title: 'Tumor - Adjacent (mean z-score)', zeroline: true },
-                    yaxis: { automargin: true },
-                    margin: { l: 100, r: 30, t: 30, b: 50 },
-                    height: 500
-                }, { responsive: true });
+            // Update subtitle
+            const subtitle = document.getElementById('cancer-type-heatmap-subtitle');
+            if (subtitle) {
+                subtitle.textContent = `${sigType} activity: ${cancerTypes.length} cancer types × ${signatures.length} signatures`;
             }
 
-            // 2. Heatmap - top signatures by cell type
-            if (container2) {
-                container2.classList.remove('loading');
-                Plotly.purge(container2);
+            container.classList.remove('loading');
+            Plotly.purge(container);
 
-                // Get top 20 signatures by absolute difference
-                const topSigs = aggregated
-                    .sort((a, b) => Math.abs(b.meanDiff) - Math.abs(a.meanDiff))
-                    .slice(0, 20)
-                    .map(d => d.signature);
-
-                // Get unique cell types
-                const cellTypes = [...new Set(filtered.map(d => d.cell_type))].slice(0, 20);
-
-                // Build matrix
-                const zMatrix = topSigs.map(sig =>
-                    cellTypes.map(ct => {
-                        const entry = filtered.find(d => d.signature === sig && d.cell_type === ct);
-                        return entry ? entry.difference : 0;
-                    })
-                );
-
-                Plotly.newPlot(container2, [{
-                    type: 'heatmap',
-                    z: zMatrix,
-                    x: cellTypes,
-                    y: topSigs,
-                    colorscale: [[0, '#a8d4e6'], [0.5, '#f5f5f5'], [1, '#f4a6a6']],
-                    zmid: 0,
-                    colorbar: { title: 'Diff' }
-                }], {
-                    margin: { l: 100, r: 30, t: 30, b: 120 },
-                    xaxis: { tickangle: 45 },
-                    height: 500
-                }, { responsive: true });
-            }
+            const labels = data.cancer_labels || {};
+            Plotly.newPlot(container, [{
+                type: 'heatmap',
+                z: zMatrix,
+                x: signatures,
+                y: cancerTypes.map(ct => labels[ct] || ct),
+                colorscale: [[0, '#2166ac'], [0.5, '#f7f7f7'], [1, '#b2182b']],
+                zmid: 0,
+                colorbar: { title: 'Activity' },
+                hovertemplate: '<b>%{y}</b><br>%{x}: %{z:.3f}<extra></extra>'
+            }], {
+                margin: { l: 180, r: 50, t: 20, b: 100 },
+                xaxis: { tickangle: 45 },
+                height: Math.max(400, cancerTypes.length * 30 + 150)
+            }, { responsive: true });
         }
 
         // scAtlas: Immune Infiltration
@@ -10059,8 +10166,40 @@
             }
 
             // scAtlas Cancer Types
-            document.getElementById('cancer-type-select')?.addEventListener('change', updateCancerTypes);
-            document.getElementById('cancer-type-sig')?.addEventListener('change', updateCancerTypes);
+            document.getElementById('cancer-type-select')?.addEventListener('change', () => {
+                updateCancerTypesBar();
+                updateCancerTypesHeatmap();
+            });
+            document.getElementById('cancer-type-sig')?.addEventListener('change', () => {
+                populateCancerTypesDropdowns();
+                updateCancerTypesBar();
+                updateCancerTypesHeatmap();
+            });
+            document.getElementById('cancer-type-protein-dropdown')?.addEventListener('change', (e) => {
+                const searchInput = document.getElementById('cancer-type-protein-search');
+                if (searchInput) searchInput.value = e.target.value;
+                updateCancerTypesBar();
+            });
+
+            // Cancer Types protein search autocomplete
+            const cancerTypeSearch = document.getElementById('cancer-type-protein-search');
+            if (cancerTypeSearch) {
+                cancerTypeSearch.addEventListener('focus', showCancerTypeSuggestions);
+                cancerTypeSearch.addEventListener('input', showCancerTypeSuggestions);
+                cancerTypeSearch.addEventListener('keydown', (e) => {
+                    if (e.key === 'Enter') {
+                        document.getElementById('cancer-type-suggestions').style.display = 'none';
+                        const dropdown = document.getElementById('cancer-type-protein-dropdown');
+                        if (dropdown) dropdown.value = e.target.value;
+                        updateCancerTypesBar();
+                    }
+                });
+                cancerTypeSearch.addEventListener('blur', () => {
+                    setTimeout(() => {
+                        document.getElementById('cancer-type-suggestions').style.display = 'none';
+                    }, 200);
+                });
+            }
 
             // scAtlas Immune Infiltration
             document.getElementById('infiltration-cancer')?.addEventListener('change', updateImmuneInfiltration);
