--- a/cytoatlas-api/static/index.html
+++ b/cytoatlas-api/static/index.html
@@ -31,10 +31,12 @@
 
             <nav class="nav">
                 <a href="/" class="nav-link active" data-page="home">Home</a>
+                <a href="/search" class="nav-link" data-page="search">Search</a>
                 <a href="/explore" class="nav-link" data-page="explore">Explore</a>
                 <a href="/compare" class="nav-link" data-page="compare">Compare</a>
                 <a href="/validate" class="nav-link" data-page="validate">Validate</a>
                 <a href="/submit" class="nav-link" data-page="submit">Submit</a>
+                <a href="/chat" class="nav-link" data-page="chat">Chat</a>
             </nav>
 
             <div class="header-search">
@@ -136,25 +138,35 @@
             <section class="features-section">
                 <h2 class="section-title">What You Can Do</h2>
                 <div class="features-grid">
-                    <div class="feature-card">
+                    <div class="feature-card" onclick="Router.navigate('/search')">
                         <div class="feature-icon">&#128270;</div>
                         <h3>Search</h3>
-                        <p>Query cytokines, cell types, and diseases across all atlases</p>
+                        <p>Find cytokines, proteins, cell types, and diseases across all atlases</p>
                     </div>
-                    <div class="feature-card">
+                    <div class="feature-card" onclick="Router.navigate('/explore')">
                         <div class="feature-icon">&#128202;</div>
                         <h3>Explore</h3>
                         <p>Interactive heatmaps, scatter plots, and correlation analyses</p>
                     </div>
-                    <div class="feature-card">
+                    <div class="feature-card" onclick="Router.navigate('/compare')">
                         <div class="feature-icon">&#128200;</div>
                         <h3>Compare</h3>
                         <p>Cross-atlas comparison of cytokine activities</p>
                     </div>
-                    <div class="feature-card">
+                    <div class="feature-card" onclick="Router.navigate('/validate')">
                         <div class="feature-icon">&#9989;</div>
                         <h3>Validate</h3>
                         <p>5-type credibility assessment for inference quality</p>
+                    </div>
+                    <div class="feature-card" onclick="Router.navigate('/submit')">
+                        <div class="feature-icon">&#128193;</div>
+                        <h3>Submit</h3>
+                        <p>Upload your H5AD data for CytoSig/SecAct inference</p>
+                    </div>
+                    <div class="feature-card" onclick="Router.navigate('/chat')">
+                        <div class="feature-icon">&#128172;</div>
+                        <h3>Chat</h3>
+                        <p>Ask questions with AI-powered natural language assistant</p>
                     </div>
                 </div>
             </section>
@@ -319,11 +331,16 @@
     <script src="/static/js/components/atlas-card.js"></script>
     <script src="/static/js/components/heatmap.js"></script>
     <script src="/static/js/components/scatter.js"></script>
+    <script src="/static/js/components/chat-viz.js"></script>
+    <script src="/static/js/components/chat-widget.js"></script>
     <script src="/static/js/pages/home.js"></script>
     <script src="/static/js/pages/explore.js"></script>
     <script src="/static/js/pages/atlas-detail.js"></script>
     <script src="/static/js/pages/validate.js"></script>
     <script src="/static/js/pages/compare.js"></script>
+    <script src="/static/js/pages/search.js"></script>
+    <script src="/static/js/pages/submit.js"></script>
+    <script src="/static/js/pages/chat.js"></script>
     <script src="/static/js/app.js"></script>
 </body>
 </html>
