--- a/visualization/index.html
+++ b/visualization/index.html
@@ -3436,7 +3436,7 @@
                 d.group1 === group1 &&
                 d.group2 === group2 &&
                 d.signature === sigType &&
-                !isNaN(d.log2fc) &&
+                !isNaN(d.activity_diff) &&
                 isFinite(d.neg_log10_pval)
             );
 
@@ -3444,8 +3444,8 @@
             if (sigType === 'SecAct' && data.length > 200) {
                 // Sort by combined score of significance and effect size
                 data = [...data].sort((a, b) => {
-                    const scoreA = a.neg_log10_pval * Math.abs(a.log2fc);
-                    const scoreB = b.neg_log10_pval * Math.abs(b.log2fc);
+                    const scoreA = a.neg_log10_pval * Math.abs(a.activity_diff);
+                    const scoreB = b.neg_log10_pval * Math.abs(b.activity_diff);
                     return scoreB - scoreA;
                 }).slice(0, 200);
             }
@@ -3466,25 +3466,25 @@
 
             // Color by significance
             const colors = data.map(d => {
-                if (d.qvalue < 0.05 && Math.abs(d.log2fc) > 0.5) {
-                    return d.log2fc > 0 ? '#f4a6a6' : '#a8d4e6';
+                if (d.qvalue < 0.05 && Math.abs(d.activity_diff) > 0.5) {
+                    return d.activity_diff > 0 ? '#f4a6a6' : '#a8d4e6';
                 }
                 return '#cccccc';
             });
 
             // Only show text for significant points
             const textLabels = data.map(d => {
-                if (d.qvalue < 0.05 && Math.abs(d.log2fc) > 0.5) {
+                if (d.qvalue < 0.05 && Math.abs(d.activity_diff) > 0.5) {
                     return d.protein;
                 }
                 return '';
             });
 
             // Dynamic x-axis range based on data
-            const maxAbsFC = Math.max(3, Math.ceil(Math.max(...data.map(d => Math.abs(d.log2fc)))));
+            const maxAbsFC = Math.max(3, Math.ceil(Math.max(...data.map(d => Math.abs(d.activity_diff)))));
 
             Plotly.newPlot(container, [{
-                x: data.map(d => d.log2fc),
+                x: data.map(d => d.activity_diff),
                 y: data.map(d => d.neg_log10_pval),
                 text: textLabels,
                 customdata: data.map(d => d.protein),
@@ -3571,7 +3571,7 @@
             // Calculate significance score and sort
             const scoredData = data.map(d => ({
                 ...d,
-                score: Math.abs(d.log2fc) * d.neg_log10_pval
+                score: Math.abs(d.activity_diff) * d.neg_log10_pval
             }));
 
             // Sort by score descending and take top 20
@@ -3582,11 +3582,11 @@
                 type: 'bar',
                 orientation: 'h',
                 y: top20.map(d => d.protein),
-                x: top20.map(d => d.log2fc),
+                x: top20.map(d => d.activity_diff),
                 marker: {
-                    color: top20.map(d => d.log2fc > 0 ? '#f4a6a6' : '#a8d4e6')
+                    color: top20.map(d => d.activity_diff > 0 ? '#f4a6a6' : '#a8d4e6')
                 },
-                text: top20.map(d => d.log2fc.toFixed(2)),
+                text: top20.map(d => d.activity_diff.toFixed(2)),
                 textposition: 'outside',
                 textfont: { size: 9 },
                 hovertemplate: '<b>%{y}</b><br>Δ Activity: %{x:.3f}<br>q = %{customdata}<extra></extra>',
@@ -4041,7 +4041,7 @@
 
             const sigData = filtered.filter(d => d.signature === selectedSig);
             if (sigData.length > 0) {
-                sigData.sort((a, b) => b.log2fc - a.log2fc);
+                sigData.sort((a, b) => b.activity_diff - a.activity_diff);
 
                 // Create paired dot plot with connecting lines
                 const yLabels = sigData.map(d => labels[d.cancer_type] || d.cancer_type);
@@ -4100,7 +4100,7 @@
                 const zMatrix = cancerTypes.map(ct =>
                     dispSigs.map(sig => {
                         const item = filtered.find(d => d.cancer_type === ct && d.signature === sig);
-                        return item ? item.log2fc : 0;
+                        return item ? item.activity_diff : 0;
                     })
                 );
 
@@ -4671,14 +4671,14 @@
 
                 const diffData = filtered.map(d => ({
                     signature: d.signature,
-                    log2fc: d.log2fc || 0,
+                    activity_diff: d.activity_diff || 0,
                     pvalue: d.pvalue || 1,
                     negLogP: d.neg_log10_pval || -Math.log10(Math.max(d.pvalue || 1, 1e-100))
                 }));
 
-                const significantUp = diffData.filter(d => d.log2fc > 0.3 && d.pvalue < 0.05);
-                const significantDown = diffData.filter(d => d.log2fc < -0.3 && d.pvalue < 0.05);
-                const notSig = diffData.filter(d => Math.abs(d.log2fc) <= 0.3 || d.pvalue >= 0.05);
+                const significantUp = diffData.filter(d => d.activity_diff > 0.3 && d.pvalue < 0.05);
+                const significantDown = diffData.filter(d => d.activity_diff < -0.3 && d.pvalue < 0.05);
+                const notSig = diffData.filter(d => Math.abs(d.activity_diff) <= 0.3 || d.pvalue >= 0.05);
 
                 // Update subtitle
                 const volcanoSubtitle = document.getElementById('diff-volcano-subtitle');
@@ -4698,19 +4698,19 @@
                 Plotly.newPlot(volcanoContainer, [
                     {
                         type: 'scatter', mode: 'markers+text', name: 'Higher in Adjacent',
-                        x: significantUp.map(d => d.log2fc), y: significantUp.map(d => d.negLogP),
+                        x: significantUp.map(d => d.activity_diff), y: significantUp.map(d => d.negLogP),
                         text: significantUp.map(d => d.signature), textposition: 'top center', textfont: { size: 9 },
                         marker: { color: '#ff7f0e', size: 10 }
                     },
                     {
                         type: 'scatter', mode: 'markers+text', name: 'Higher in Tumor',
-                        x: significantDown.map(d => d.log2fc), y: significantDown.map(d => d.negLogP),
+                        x: significantDown.map(d => d.activity_diff), y: significantDown.map(d => d.negLogP),
                         text: significantDown.map(d => d.signature), textposition: 'top center', textfont: { size: 9 },
                         marker: { color: '#d62728', size: 10 }
                     },
                     {
                         type: 'scatter', mode: 'markers', name: 'Not significant',
-                        x: notSig.map(d => d.log2fc), y: notSig.map(d => d.negLogP),
+                        x: notSig.map(d => d.activity_diff), y: notSig.map(d => d.negLogP),
                         text: notSig.map(d => d.signature), marker: { color: '#ccc', size: 6 },
                         hovertemplate: '<b>%{text}</b><br>Δ Activity: %{x:.3f}<br>-log10(p): %{y:.2f}<extra></extra>'
                     }
@@ -4733,18 +4733,18 @@
                 barContainer.classList.remove('loading');
                 Plotly.purge(barContainer);
 
-                const sorted = [...filtered].sort((a, b) => Math.abs(b.log2fc || 0) - Math.abs(a.log2fc || 0));
+                const sorted = [...filtered].sort((a, b) => Math.abs(b.activity_diff || 0) - Math.abs(a.activity_diff || 0));
                 const top15 = sorted.slice(0, 15);
 
                 Plotly.newPlot(barContainer, [{
                     type: 'bar',
                     orientation: 'h',
                     y: top15.map(d => d.signature),
-                    x: top15.map(d => d.log2fc || 0),
+                    x: top15.map(d => d.activity_diff || 0),
                     marker: {
-                        color: top15.map(d => (d.pvalue || 1) < 0.05 ? ((d.log2fc || 0) > 0 ? '#ff7f0e' : '#d62728') : '#ccc')
+                        color: top15.map(d => (d.pvalue || 1) < 0.05 ? ((d.activity_diff || 0) > 0 ? '#ff7f0e' : '#d62728') : '#ccc')
                     },
-                    text: top15.map(d => (d.log2fc || 0).toFixed(3)),
+                    text: top15.map(d => (d.activity_diff || 0).toFixed(3)),
                     textposition: 'auto',
                     hovertemplate: '<b>%{y}</b><br>Δ Activity: %{x:.3f}<br>p = %{customdata:.2e}<extra></extra>',
                     customdata: top15.map(d => d.pvalue || 1)
@@ -6741,8 +6741,8 @@
             // For SecAct (many proteins), limit to top 200 by significance score
             if (sigType === 'SecAct' && filteredData.length > 200) {
                 filteredData = [...filteredData].sort((a, b) => {
-                    const scoreA = a.neg_log10_pval * Math.abs(a.log2fc);
-                    const scoreB = b.neg_log10_pval * Math.abs(b.log2fc);
+                    const scoreA = a.neg_log10_pval * Math.abs(a.activity_diff);
+                    const scoreB = b.neg_log10_pval * Math.abs(b.activity_diff);
                     return scoreB - scoreA;
                 }).slice(0, 200);
             }
@@ -6792,26 +6792,26 @@
 
                 // Color by significance (matching CIMA style)
                 const colors = filteredData.map(d => {
-                    if (d.qvalue < 0.05 && Math.abs(d.log2fc) > 0.5) {
-                        return d.log2fc > 0 ? '#f4a6a6' : '#a8d4e6';
+                    if (d.qvalue < 0.05 && Math.abs(d.activity_diff) > 0.5) {
+                        return d.activity_diff > 0 ? '#f4a6a6' : '#a8d4e6';
                     }
                     return '#cccccc';
                 });
 
                 // Only show text for significant points
                 const textLabels = filteredData.map(d => {
-                    if (d.qvalue < 0.05 && Math.abs(d.log2fc) > 0.5) {
+                    if (d.qvalue < 0.05 && Math.abs(d.activity_diff) > 0.5) {
                         return d.protein;
                     }
                     return '';
                 });
 
                 // Dynamic x-axis range based on data
-                const maxAbsFC = Math.max(3, Math.ceil(Math.max(...filteredData.map(d => Math.abs(d.log2fc)))));
+                const maxAbsFC = Math.max(3, Math.ceil(Math.max(...filteredData.map(d => Math.abs(d.activity_diff)))));
                 const maxY = Math.max(4, Math.ceil(Math.max(...filteredData.map(d => d.neg_log10_pval))));
 
                 Plotly.newPlot(container1, [{
-                    x: filteredData.map(d => d.log2fc),
+                    x: filteredData.map(d => d.activity_diff),
                     y: filteredData.map(d => d.neg_log10_pval),
                     text: textLabels,
                     customdata: filteredData.map(d => d.protein),
@@ -6888,7 +6888,7 @@
                 // Calculate significance score and sort
                 const scoredData = filteredData.map(d => ({
                     ...d,
-                    score: Math.abs(d.log2fc) * d.neg_log10_pval
+                    score: Math.abs(d.activity_diff) * d.neg_log10_pval
                 }));
 
                 // Sort by score descending and take top 20
@@ -6899,11 +6899,11 @@
                     type: 'bar',
                     orientation: 'h',
                     y: top20.map(d => d.protein),
-                    x: top20.map(d => d.log2fc),
+                    x: top20.map(d => d.activity_diff),
                     marker: {
-                        color: top20.map(d => d.log2fc > 0 ? '#f4a6a6' : '#a8d4e6')
+                        color: top20.map(d => d.activity_diff > 0 ? '#f4a6a6' : '#a8d4e6')
                     },
-                    text: top20.map(d => d.log2fc.toFixed(2)),
+                    text: top20.map(d => d.activity_diff.toFixed(2)),
                     textposition: 'outside',
                     textfont: { size: 9 },
                     hovertemplate: '<b>%{y}</b><br>Effect: %{x:.3f}<br>q = %{customdata}<extra></extra>',
@@ -9442,9 +9442,9 @@
             const sigAggregated = {};
             comparisonData.forEach(d => {
                 if (!sigAggregated[d.signature]) {
-                    sigAggregated[d.signature] = { log2fc: [], mean_exhausted: [], mean_nonexhausted: [], pvalue: [] };
+                    sigAggregated[d.signature] = { activity_diff: [], mean_exhausted: [], mean_nonexhausted: [], pvalue: [] };
                 }
-                sigAggregated[d.signature].log2fc.push(d.log2fc);
+                sigAggregated[d.signature].activity_diff.push(d.activity_diff);
                 sigAggregated[d.signature].mean_exhausted.push(d.mean_exhausted);
                 sigAggregated[d.signature].mean_nonexhausted.push(d.mean_nonexhausted);
                 if (d.pvalue) sigAggregated[d.signature].pvalue.push(d.pvalue);
@@ -9452,14 +9452,14 @@
 
             const aggregatedList = Object.entries(sigAggregated).map(([sig, vals]) => ({
                 signature: sig,
-                log2fc: vals.log2fc.reduce((a, b) => a + b, 0) / vals.log2fc.length,
+                activity_diff: vals.activity_diff.reduce((a, b) => a + b, 0) / vals.activity_diff.length,
                 mean_exhausted: vals.mean_exhausted.reduce((a, b) => a + b, 0) / vals.mean_exhausted.length,
                 mean_nonexhausted: vals.mean_nonexhausted.reduce((a, b) => a + b, 0) / vals.mean_nonexhausted.length,
                 pvalue: vals.pvalue.length > 0 ? vals.pvalue.reduce((a, b) => a + b, 0) / vals.pvalue.length : 1
             }));
 
             // Sort by absolute log2fc
-            const sorted = aggregatedList.sort((a, b) => Math.abs(b.log2fc) - Math.abs(a.log2fc));
+            const sorted = aggregatedList.sort((a, b) => Math.abs(b.activity_diff) - Math.abs(a.activity_diff));
 
             // Update titles based on selection
             const sigLabel = sigType === 'cytosig' ? 'CytoSig' : 'SecAct';
@@ -9485,16 +9485,16 @@
                     type: 'bar',
                     orientation: 'h',
                     y: top20.map(d => d.signature),
-                    x: top20.map(d => d.log2fc),
+                    x: top20.map(d => d.activity_diff),
                     marker: {
-                        color: top20.map(d => d.log2fc > 0 ? '#d62728' : '#2166ac')
+                        color: top20.map(d => d.activity_diff > 0 ? '#d62728' : '#2166ac')
                     },
-                    text: top20.map(d => d.log2fc.toFixed(2)),
+                    text: top20.map(d => d.activity_diff.toFixed(2)),
                     textposition: 'auto',
                     textfont: { size: 10 },
                     hovertemplate: top20.map(d => {
-                        const direction = d.log2fc > 0 ? 'High in Exhausted' : 'High in Non-exhausted';
-                        return `<b>${d.signature}</b><br>Δ Activity: ${d.log2fc.toFixed(3)}<br>${direction}<br>P-value: ${d.pvalue.toExponential(2)}<extra></extra>`;
+                        const direction = d.activity_diff > 0 ? 'High in Exhausted' : 'High in Non-exhausted';
+                        return `<b>${d.signature}</b><br>Δ Activity: ${d.activity_diff.toFixed(3)}<br>${direction}<br>P-value: ${d.pvalue.toExponential(2)}<extra></extra>`;
                     })
                 }], {
                     xaxis: { title: '← High in Non-exhausted    Δ Activity    High in Exhausted →', zeroline: true, zerolinewidth: 2 },
@@ -9537,7 +9537,7 @@
                     textfont: { size: 8 },
                     marker: {
                         size: showLabels ? 8 : 10,
-                        color: aggregatedList.map(d => d.log2fc),
+                        color: aggregatedList.map(d => d.activity_diff),
                         colorscale: [[0, '#2166ac'], [0.5, '#f5f5f5'], [1, '#d62728']],
                         cmin: -1,
                         cmax: 1,
